--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,15 +1,5 @@
 spring.jpa.hibernate.ddl-auto=update
-spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:3306/messages?serverTimezone=UTC
-spring.datasource.username=mysql
-spring.datasource.password=mysql
+spring.datasource.url=${SPRING_DATASOURCE_URL:jdbc:mysql://${MYSQL_HOST:localhost}:3306/messages?serverTimezone=UTC}
+spring.datasource.username=${SPRING_DATASOURCE_USERNAME:mysql}
+spring.datasource.password=${SPRING_DATASOURCE_PASSWORD:mysql}
 spring.jpa.generate-ddl=true
-
-
-security.oauth2.client.clientId=370148451998-0s3ih1tcjucg2nt8u4lasuvcmjoivh32.apps.googleusercontent.com
-security.oauth2.client.clientSecret=00Kf9bujg_YsEwbGZcQloq7A
-security.oauth2.client.accessTokenUri=https://www.googleapis.com/oauth2/v4/token
-security.oauth2.client.userAuthorizationUri=https://accounts.google.com/o/oauth2/v2/auth
-security.oauth2.client.clientAuthenticationScheme=form
-security.oauth2.client.scope=openid,email,profile
-security.oauth2.resource.userInfoUri=https://www.googleapis.com/oauth2/v3/userinfo
-security.oauth2.resource.preferTokenInfo=true
