--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,11 @@
 spring.jpa.hibernate.ddl-auto=update
-spring.datasource.url=${SPRING_DATASOURCE_URL:jdbc:mysql://${MYSQL_HOST:localhost}:3306/messages?serverTimezone=UTC}
-spring.datasource.username=${SPRING_DATASOURCE_USERNAME:mysql}
-spring.datasource.password=${SPRING_DATASOURCE_PASSWORD:mysql}
+spring.datasource.url=${SPRING_DATASOURCE_URL:jdbc:postgresql://localhost:5432/messages}
+spring.datasource.username=${SPRING_DATASOURCE_USERNAME:root}
+spring.datasource.password=${SPRING_DATASOURCE_PASSWORD:1488}
 spring.jpa.generate-ddl=true
+
+spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
+
+spring.datasource.driver-class-name=org.postgresql.Driver
+spring.jpa.database=postgresql
+spring.jpa.database-platform=org.hibernate.dialect.PostgreSQL10Dialect
